# mcp-glpi-it4

./: .env.example  .gitignore  LICENSE  README.md  endpoint_map.json  manifest.json  pyproject.toml
.github/workflows/: tests.yml
docs/: DESENVOLVIMENTO.md  REVERSAO.md  USO.md
src/mcp_glpi_it4/: __init__.py  config.py  server.py
src/mcp_glpi_it4/glpi/: __init__.py  audit.py  core.py  maps.py
src/mcp_glpi_it4/tools/: __init__.py  assets.py  config_tools.py  support.py  tickets.py  users.py
tests/: conftest.py  test_core.py  test_tools.py  test_users.py
