[project]
name = "mcp-glpi-it4"
version = "0.1.0"
description = "MCP Server para integração com GLPI (High-level API v2.3 / OAuth2) — IT4Solução"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "IT4Solução" }]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.scripts]
mcp-glpi-it4 = "mcp_glpi_it4.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_glpi_it4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
